jenkins/route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: http
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`jenkins.cams7.ml`)
      kind: Rule
      middlewares:
        - name: jenkins-redirect-scheme  
      services:
        - name: jenkins
          port: 8080
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: https
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`jenkins.cams7.ml`)
      kind: Rule
      services:
        - name: jenkins
          port: 8080
  tls:
    secretName: jenkins.cams7.ml
